# larcv3_develop

./: .Dockerfile  .gitignore  README.md
docs/source/: conf.py  index.rst
docs/source/installation/: install.rst
docs/source/introduction/: intro.rst
larcv/: distributed_queue_interface.py  queueinterface.py
src/: CMakeLists.txt
src/larcv3/: CMakeLists.txt  larcv.cxx
src/larcv3/app/: CMakeLists.txt
src/larcv3/app/Supera/: BBox.cxx  BBox.h  CMakeLists.txt  GNUmakefile  LinkDef.h  MCParticleList.cxx  MCParticleList.h  Supera.cxx  Supera.h  SuperaBBoxInteraction.cxx  SuperaBBoxInteraction.h  SuperaBase.cxx  SuperaBase.h  SuperaG4HitSegment.cxx  SuperaG4HitSegment.h  SuperaG4Trajectory.cxx  SuperaG4Trajectory.h  SuperaLorentz.cxx  SuperaLorentz.h  SuperaMCParticleCluster.cxx  SuperaMCParticleCluster.h  SuperaMCParticleClusterData.cxx  SuperaMCParticleClusterData.h  TG4Event.h  TG4HitSegment.h  TG4PrimaryVertex.h  TG4Trajectory.h  Voxelize.cxx  Voxelize.h  geometry.cxx  geometry.h  larcv_interface.cxx  larcv_interface.h  raybox.h  run_supera.py  supera-ndlar.cfg  supera-ndlar.masknotruth.cfg  supera-ndlar.verbose.cfg  supera.root  test_supera.sh
src/larcv3/app/filter/: CMakeLists.txt  ParticleCountFilter.cxx
src/larcv3/app/imagemod/: CMakeLists.txt  ParticleCorrector.cxx  ParticleCorrector.h
src/larcv3/app/queueio/: BatchFillerSparseTensor.cxx  BatchFillerSparseTensor.h  CMakeLists.txt  QueueProcessor.cxx  QueueProcessor.h
src/larcv3/app/sbnd_imagemod/: CMakeLists.txt
src/larcv3/core/base/: larcv_logger.cxx
src/larcv3/core/processor/: CMakeLists.txt  ProcessBase.cxx  ProcessBase.h  ProcessDriver.cxx  ProcessFactory.h
(+10 files in other folders)
